--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                             <li>
                                 <a href="{% url 'booknow' %}">Book Now</a>
                             </li>
-                            {% if  user.username != "admin" %}}
+                            {% if  user.username != "admin" %}
                                 <li>
                                     <a href="{% url 'booking' %}">My Bookings</a>
                                 </li>
