--- a/menu/templates/menu/edit_item.html
+++ b/menu/templates/menu/edit_item.html
@@ -6,14 +6,14 @@
 {% block content %}
 <!-- Page summary -->
     {% if request.user.is_authenticated %}
-        <div class="container">
+        <div class="container menu_container" id="edit_item_container">
             <div class="row">
                 <div class="col">
                     <h1>Hello edit menu item here</h1>
                     <form method= "POST">
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button type="submit">Update</button>
+                        <button class="btn btn-success" type="submit">Update</button>
                     </form>
                 </div>
             </div>
