--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -5,6 +5,11 @@
 {% block content %}
 <!-- Page summary -->
     <div class="container menu_container">
+        <div class="row message">
+            <div class="col">
+                <p>{{ message }}</p>
+            </div>
+        </div>
         <div class="row page_description">
             <div class="col">
                 <h2>The greenwich menu</h2>
@@ -38,7 +43,7 @@
                                     <a href="{% url 'edit' starter.id %}">
                                         <i class="far fa-edit"></i>
                                     </a>
-                                    <a href="{% url 'delete' starter.id %}">
+                                    <a href="{% url 'delete' starter.id %}" class="delete_btn" onclick="messageDisplay">
                                         <i class="fas fa-trash-alt"></i>
                                     </a>
                                 </h3>
@@ -72,7 +77,7 @@
                                     <a href="{% url 'edit' main.id %}">
                                         <i class="far fa-edit"></i>
                                     </a>
-                                    <a href="{% url 'delete' main.id %}">
+                                    <a href="{% url 'delete' main.id %}" class="delete_btn" onclick="messageDisplay">
                                         <i class="fas fa-trash-alt"></i>
                                     </a>
                                 </h3>
@@ -106,7 +111,7 @@
                                     <a href="{% url 'edit' desert.id %}">
                                         <i class="far fa-edit"></i>
                                     </a>
-                                    <a href="{% url 'delete' desert.id %}">
+                                    <a href="{% url 'delete' desert.id %}" class="delete_btn" onclick="messageDisplay">
                                         <i class="fas fa-trash-alt"></i>
                                     </a>
                                 </h3>
