--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,34 +2,33 @@
 
 {% block content %}
 <div class="row" id="index_wrapper">
-    <div class="row">
-        <div class="col-3" id="tab_content">
-            <div class="tab">
-                <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
-                <button class="tablinks" id="signup_tablink" onclick="activeTab('signup')">Sign Up</button>              
-            </div>
-            <div id="login_container" class="tabcontent">
-                <h3>Login</h3>
-                <form class="login" method="POST" action="{% url 'account_login' %}">
-                    {% csrf_token %}
-                    {{ login_form.as_p }}
-                    {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    <button class="primaryAction" type="submit">Login</button>
-                </form>
-            </div>
-            <div id="singup_container" class="tabcontent">
-                <h3>Sign Up</h3>
-                <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-                    {% csrf_token %}
-                    {{ signup_form.as_p}}
-                    {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    <button type= "submit">Sign up </button>
-                </form>
-            </div>
+    <img src="https://res.cloudinary.com/dmgrh8ekr/image/upload/v1641584745/greenwich/main2_iioljt.jpg" alt="Restaurant terrace view">
+    <div class="col-3" id="tab_content">
+        <div class="tab">
+            <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
+            <button class="tablinks" id="signup_tablink" onclick="activeTab('signup')">Sign Up</button>              
+        </div>
+        <div id="login_container" class="tabcontent">
+            <h3>Login</h3>
+            <form class="login" method="POST" action="{% url 'account_login' %}">
+                {% csrf_token %}
+                {{ login_form.as_p }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <button class="primaryAction" type="submit">Login</button>
+            </form>
+        </div>
+        <div id="singup_container" class="tabcontent">
+            <h3>Sign Up</h3>
+            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                {% csrf_token %}
+                {{ signup_form.as_p}}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <button type= "submit">Sign up </button>
+            </form>
         </div>
     </div>
 </div>
