Restyle the index page|

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row" id="index_wrapper">
     <img src="https://res.cloudinary.com/dmgrh8ekr/image/upload/v1641584745/greenwich/main2_iioljt.jpg" alt="Restaurant terrace view">
-    <div class="col-3" id="tab_content">
+    <div id="tab_content">
         <div class="tab">
             <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
             <button class="tablinks" id="signup_tablink" onclick="activeTab('signup')">Sign Up</button>              
