--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,7 +57,7 @@ li a {
 footer {
     background-color: #323232;
     color: white;
-    height: 50px;
+    height: 54px;
     text-align: center;
     margin-bottom: 0;
 }
@@ -66,6 +66,7 @@ footer {
 /* Styles for index.html */
 #index_wrapper {
     width: 100%;
+    position: relative;
 }
 
 #index_wrapper img {
@@ -73,10 +74,11 @@ footer {
 }
 
 #tab_content{
-    /* min-height: 100vh; */
+    width: 50%;
     background-color: #323232;
     align-items: center;
-    margin: 15px auto;
+    position: absolute;
+    top: 35%;
 }
 
 /* login styles */
