--- a/menu/templates/menu/menu.html
+++ b/menu/templates/menu/menu.html
@@ -4,12 +4,7 @@
 
 {% block content %}
 <!-- Page summary -->
-    <div class="container menu_container">
-        <div class="row message">
-            <div class="col">
-                <p>{{ message }}</p>
-            </div>
-        </div>
+    <div class="container" id="menu_container">
         <div class="row page_description">
             <div class="col">
                 <h2>The greenwich menu</h2>
