--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -3,9 +3,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    {% if request.user.is_authenticated %}
-        <h2>Hello I am book now</h2>
-        <div class="container">
+    <div class="container" id="book_now_container">
+        {% if request.user.is_authenticated %}
+            <div class="row">
+                <div class="col">
+                    <h2>Hello {{ user.username}} here you can reserver you table.</h2>
+                </div>
+            </div>
             <div class="row">
                 <div class="col">
                     <form method= "POST">
@@ -15,15 +19,13 @@
                     </form>
                 </div>
             </div>
-        </div>
-    {% else %}
-        <div class="container">
+        {% else %}
             <div class="row">
                 <div class="col">
                     <h1>You need to be logged in to see the content of this page.</h1>
                     <p>Login or sign up <a href="{% url 'index' %}">here!</a></p>
                 </div>
             </div>
-        </div>
-    {% endif %}
+        {% endif %}
+    </div>
 {% endblock %}
