--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,9 +11,10 @@ html, body { height:100%; padding:0; margin:0; }
 /* Styles for base.html */
 /* Header area */
 body {
-    background-color: #323232;
     min-width: 100vw;
     overflow-x: hidden;
+    background-image: url('https://res.cloudinary.com/dmgrh8ekr/image/upload/v1642891482/greenwich/pattern_wg14iu.png');
+    background-size: 600px;
 }
 
 #logo {
@@ -50,6 +51,7 @@ li a {
 }
 
 #base_container{
+    min-height: 90vh; /* Fix it according to the margin of the other pages apart from the index one*/
     width: 100%;
 }
 
@@ -63,22 +65,24 @@ footer {
 }
 /* end of styles for base.html */
 
+
 /* Styles for index.html */
 #index_wrapper {
     width: 100%;
     position: relative;
 }
 
-#index_wrapper img {
-    height: 90vh;
-}
-
 #tab_content{
-    width: 50%;
-    background-color: #323232;
+    width: 20%;
+    height: 45%;
     align-items: center;
     position: absolute;
-    top: 35%;
+    left: 40%;
+    top: 25%;
+}
+
+.tabcontent, .tab {
+    margin: 0 auto;
 }
 
 /* login styles */
@@ -99,6 +103,8 @@ footer {
     border: 1px solid #ccc;
     background-color: #f1f1f1;
     width: 80%;
+    display: flex;
+    justify-content: space-around;
 }
 
 /* Create an active/current tablink class */
@@ -116,8 +122,8 @@ footer {
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
+    width: 100%;
     background-color: inherit;
-    float: left;
     border: none;
     outline: none;
     cursor: pointer;
@@ -131,6 +137,7 @@ footer {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+    text-align: center;
 }
 
 .tabcontent {
@@ -144,13 +151,25 @@ footer {
 }
 /* end of styles for index.html */
 
+
+/* Styles for booknow.html */
+#book_now_container{
+    background-color: lightcoral;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+}
+/* End of booknow styles */
+
 /* Styles for booking.html */
-.title {
-    text-decoration: underline;
+#bookings_container{
+    background-color: lightcyan;
 }
 
-body{
-    background-color: lightblue;
+.title {
+    text-decoration: underline;
 }
 
 .title:hover {
@@ -169,10 +188,10 @@ body{
 
 /* Styles for menu page */
 /* Styles for main container */
-.menu_container {
+#menu_container {
     text-align: center;
     background-color: rgba(265, 265, 265, 0.9);
-    margin-top: 5%;
+    padding: 25px 0;
 }
 
 .dish_type_title {
