--- a/menu/templates/menu/add_item.html
+++ b/menu/templates/menu/add_item.html
@@ -6,7 +6,7 @@
 {% block content %}
 <!-- Page summary -->
     {% if request.user.is_authenticated %}
-        <div class="container menu_container">
+        <div class="container add_edit_container" >
             <div class="row">
                 <div class="col">
                     <h1>Hello add new menu item here</h1>
