--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row" id="index_wrapper">
-    <div id="tab_content">
+    <div class="col" id="tab_content">
         <div class="tab">
             <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
             <button class="tablinks" id="signup_tablink" onclick="activeTab('signup')">Sign Up</button>              
