--- a/menu/templates/menu/edit_item.html
+++ b/menu/templates/menu/edit_item.html
@@ -6,11 +6,11 @@
 {% block content %}
 <!-- Page summary -->
     {% if request.user.is_authenticated %}
-        <div class="container menu_container" id="edit_item_container">
+        <div class="container add_edit_container">
             <div class="row">
                 <div class="col">
                     <h1>Hello edit menu item here</h1>
-                    <form method= "POST">
+                    <form method= "POST" id="edit_form">
                         {% csrf_token %}
                         {{ form|crispy }}
                         <button class="btn btn-success" type="submit">Update</button>
