--- a/static/css/base.css
+++ b/static/css/base.css
@@ -53,6 +53,9 @@ li a {
 #base_container{
     min-height: 90vh; /* Fix it according to the margin of the other pages apart from the index one*/
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Footer area */
@@ -68,17 +71,14 @@ footer {
 
 /* Styles for index.html */
 #index_wrapper {
-    width: 100%;
-    position: relative;
+    width: 20%;
+    /* margin: 15% auto; */
 }
 
 #tab_content{
     width: 20%;
     height: 45%;
-    align-items: center;
-    position: absolute;
-    left: 40%;
-    top: 25%;
+    
 }
 
 .tabcontent, .tab {
@@ -155,7 +155,7 @@ footer {
 /* Styles for booknow.html */
 #book_now_container{
     background-color: lightcoral;
-    margin-top: 10%;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -166,6 +166,8 @@ footer {
 /* Styles for booking.html */
 #bookings_container{
     background-color: lightcyan;
+    width: 50%;
+    min-height: 80vh;
 }
 
 .title {
@@ -190,8 +192,9 @@ footer {
 /* Styles for main container */
 #menu_container {
     text-align: center;
-    background-color: rgba(265, 265, 265, 0.9);
+    background-color: rgba(265, 265, 265, 1);
     padding: 25px 0;
+    margin: 75px auto;
 }
 
 .dish_type_title {
@@ -230,6 +233,9 @@ footer {
 
 /* Styles for add and edit page */
 /* Styles for main container */
-#edit_item_container {
-    margin-top: 5%;
+.add_edit_container {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
