--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<!-- Container for the booking form -->
     <div class="container" id="book_now_container">
         {% if request.user.is_authenticated %}
             <div class="row">
