--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
+<!-- Signup and login table tab -->
 <div class="row" id="index_wrapper">
     <div class="col" id="tab_content">
         <div class="tab">
             <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
             <button class="tablinks" id="signup_tablink" onclick="activeTab('signup')">Sign Up</button>              
         </div>
+        <!-- Login tab -->
         <div id="login_container" class="tabcontent">
             <h3>Login</h3>
             <form class="login" method="POST" action="{% url 'account_login' %}">
@@ -18,6 +20,7 @@
                 <button class="primaryAction" type="submit">Login</button>
             </form>
         </div>
+        <!-- signup tab -->
         <div id="singup_container" class="tabcontent">
             <h3>Sign Up</h3>
             <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
@@ -31,4 +34,5 @@
         </div>
     </div>
 </div>
+<!-- End of table tab -->
 {% endblock %}
