--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,7 @@
         {% endblock%}
     </section>
     <footer>
+        <!-- Footer section -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
@@ -74,6 +75,7 @@
                 </div>
             </div>            
         </div>
+        <!-- End of footer section -->
     </footer>
       <!-- Custom javascript -->
       <script src="{% static 'js/base.js' %}"></script>
