--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 <!-- Signup and login table tab -->
 <div class="row" id="index_wrapper">
@@ -13,7 +15,7 @@
             <h3>Login</h3>
             <form class="login" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
-                {{ login_form.as_p }}
+                {{ login_form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
@@ -25,7 +27,7 @@
             <h3>Sign Up</h3>
             <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
-                {{ signup_form.as_p}}
+                {{ signup_form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
