--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -15,7 +15,59 @@
                 <div class="col">
                     <form method= "POST">
                         {% csrf_token %}
-                        {{ form|crispy }}
+                            {% if user.username == "admin" %}
+                                <div class="form-row">
+                                    <div class="form-group">
+                                        {{form.used_id|as_crispy_field}}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                      {{ form.booked_time|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                      {{ form.booked_date|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                      {{ form.menu_type|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                      {{ form.table_num|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                      {{ form.guests_num|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                      {{ form.status|as_crispy_field }}
+                                    </div>
+                                </div>
+                            {% else %}
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.booked_time|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.booked_date|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.guests_num|as_crispy_field }}
+                                    </div>
+                                </div>
+                            {% endif %}
                         <button type="submit">Submit</button>
                     </form>
                 </div>
