--- a/static/css/base.css
+++ b/static/css/base.css
@@ -154,7 +154,7 @@ footer {
 
 /* Styles for booknow.html */
 #book_now_container{
-    background-color: lightcoral;
+    background-color: white;
     height: 50vh;
     display: flex;
     flex-direction: column;
