--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -14,27 +14,109 @@
         {% endfor %}
       {% endif %}
       <!-- Booking information -->
-      <div class="row description">
-        <div class="col">
-          <h1>Hello {{ user.username}} here are all the bookings </h1>
-        </div>
-      </div>
-        {% for booking in bookings%}
-          <div class="row">
-            <div class="col">
-              <h2 class="title">{{ booking.booked_date|date:'l dS M Y' }} at {{ booking.booked_time|date:'H:i' }}</h2>
-              <div class="row book_information">
-                <p>Booked for: {{ booking.booked_time}}</p>
-                <p>Booked at: {{ booking.booked_date}}</p>
-                <p>Booked on: {{ booking.created_on}}</p>
-                <p>Guests: {{ booking.guests_num}}</p>
-                <p>In case of food allergies or any other information that you would like to be aware please 
-                    do not hesitate to contact us</p>
-              </div>
-            </div>
-            <hr>
+      {% if user.username == "admin" %}
+        <div class="row description">
+          <div class="col">
+            <h1>Hello {{ user.username}} here are all the bookings </h1>
           </div>
-        {% endfor %}
+        </div>
+        <div class="row">
+          <div class="col">
+            <div id="booked">
+              <h3>Here are all the comfirmed bookings</h3>
+              {% for booking in booked %}
+                  <div class="row">
+                    <div class="col">
+                      <h2 class="title">{{ booking.booked_date|date:'l dS M Y' }} at {{ booking.booked_time|date:'H:i' }}</h2>
+                      <div class="row book_information">
+                        <p>Booked for: {{ booking.booked_time}}</p>
+                        <p>Booked at: {{ booking.booked_date}}</p>
+                        <p>Booked on: {{ booking.created_on}}</p>
+                        <p>Guests: {{ booking.guests_num}}</p>
+                        <p>In case of food allergies or any other information that you would like to be aware please 
+                            do not hesitate to contact us</p>
+                      </div>
+                    </div>
+                    <hr>
+                  </div>
+              {% endfor %}
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div id="pending">
+              <h3>Here are all the pending bookings</h3>
+                {% for pend in pending %}
+                    <div class="row">
+                      <div class="col">
+                        <h2 class="title">{{ pend.booked_date|date:'l dS M Y' }} at {{ pend.booked_time|date:'H:i' }}</h2>
+                        <div class="row book_information">
+                          <p>Booked for: {{ pend.booked_time}}</p>
+                          <p>Booked at: {{ pend.booked_date}}</p>
+                          <p>Booked on: {{ pend.created_on}}</p>
+                          <p>Guests: {{ pend.guests_num}}</p>
+                          <p>In case of food allergies or any other information that you would like to be aware please 
+                              do not hesitate to contact us</p>
+                        </div>
+                      </div>
+                      <hr>
+                    </div>
+                  {% endfor %}
+            </div>
+          </div>
+        </div>
+      {% else %}
+        <div class="row">
+          <div class="col">
+            <div id="booked">
+              <h3>Here are all the comfirmed bookings</h3>
+              {% for booking in booked %}
+                {% if booking.used_id == user.username %}
+                  <div class="row">
+                    <div class="col">
+                      <h2 class="title">{{ booking.booked_date|date:'l dS M Y' }} at {{ booking.booked_time|date:'H:i' }}</h2>
+                      <div class="row book_information">
+                        <p>Booked for: {{ booking.booked_time}}</p>
+                        <p>Booked at: {{ booking.booked_date}}</p>
+                        <p>Booked on: {{ booking.created_on}}</p>
+                        <p>Guests: {{ booking.guests_num}}</p>
+                        <p>In case of food allergies or any other information that you would like to be aware please 
+                            do not hesitate to contact us</p>
+                      </div>
+                    </div>
+                    <hr>
+                  </div>
+                {% endif %}
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div id="pending">
+              <h3>Here are all the pending bookings</h3>
+              {% for pend in pending %}
+                {% if booking.used_id == user.username %}
+                  <div class="row">
+                    <div class="col">
+                      <h2 class="title">{{ pend.booked_date|date:'l dS M Y' }} at {{ pend.booked_time|date:'H:i' }}</h2>
+                      <div class="row book_information">
+                        <p>Booked for: {{ pend.booked_time}}</p>
+                        <p>Booked at: {{ pend.booked_date}}</p>
+                        <p>Booked on: {{ pend.created_on}}</p>
+                        <p>Guests: {{ pend.guests_num}}</p>
+                        <p>In case of food allergies or any other information that you would like to be aware please 
+                            do not hesitate to contact us</p>
+                      </div>
+                    </div>
+                    <hr>
+                  </div>
+                {% endif %}
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+      {% endif %}
     {% else %}
           <div class="row">
             <div class="col">
@@ -43,5 +125,5 @@
             </div>
           </div>
     {% endif %}
-    </div>
+  </div>
 {% endblock %}
