--- a/static/css/base.css
+++ b/static/css/base.css
@@ -155,19 +155,48 @@ footer {
 /* Styles for booknow.html */
 #book_now_container{
     background-color: white;
-    height: 50vh;
+    width: 30%;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;    
+}
+
+.form-heading {
+    text-align: center;
+    margin-top: 25px;
+}
+
+#form_content{
+    margin: 25px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.col form {
+    width: 60%;
+}
+
+.form-row{
+    margin-top: 10px;
+}
+
+#book_btn{
+    margin: 25px 0;
+    width: 25%;
 }
 /* End of booknow styles */
 
 /* Styles for booking.html */
 #bookings_container{
-    background-color: lightcyan;
+    background-color: white;
     width: 50%;
     min-height: 80vh;
+}
+
+.description {
+    margin: 25px 0;
 }
 
 .title {
@@ -176,7 +205,7 @@ footer {
 
 .title:hover {
     cursor: pointer;
-    color: white;
+    color: #b4ebc2;
 }
 
 .book_information {
