--- a/menu/templates/menu/edit_item.html
+++ b/menu/templates/menu/edit_item.html
@@ -7,12 +7,31 @@
     {% if request.user.is_authenticated %}
         <div class="container add_edit_container">
             <div class="row">
-                <div class="col">
-                    <h1>Hello edit menu item here</h1>
+                <div class="col item_form_content">
+                    <h1 class="form-heading">Hello edit menu item here</h1>
                     <form method= "POST" id="edit_form">
                         {% csrf_token %}
-                        {{ form|crispy }}
-                        <button class="btn btn-success" type="submit">Update</button>
+                        <div class="form-row">
+                            <div class="form-group">
+                                {{form.title|as_crispy_field}}
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                {{form.components|as_crispy_field}}
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                {{form.price|as_crispy_field}}
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                {{form.item_category|as_crispy_field}}
+                            </div>
+                        </div>
+                        <button class="btn btn-success" type="submit" id="update_btn">Update</button>
                     </form>
                 </div>
             </div>
