--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -68,7 +68,7 @@
                                     </div>
                                 </div>
                             {% endif %}
-                        <button type="submit" class="btn btn-success" id="book_btn">Book</button>
+                        <button type="submit" class="btn btn-success" id="book_btn">Book Now</button>
                     </form>
                 </div>
             </div>
