--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" id="signup_container">
   <div class="row">
     <div class="col">
       <h1>{% trans "Sign Up" %}</h1>
