--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,15 +24,15 @@
         </div>
         <!-- signup tab -->
         <div id="singup_container" class="tabcontent">
-            <h3>Sign Up</h3>
-            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+            <a href="{% url 'account_signup' %}"><h3>Sign Up</h3></a>
+            <!-- <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 {{ signup_form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
                 <button type= "submit">Sign up </button>
-            </form>
+            </form> -->
         </div>
     </div>
 </div>
