--- a/static/css/base.css
+++ b/static/css/base.css
@@ -302,5 +302,18 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
+    width: 25%;
+    min-height: 40vh;
+}
+
+#singup_description{
+    margin: 25px auto;
+}
+
+#signup_form {
+    width: 100%;
+}
+
+#singup_btn{
+    margin: 25px auto;
 }
