--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -2,12 +2,14 @@
 
 {% load i18n %}
 
+{% load crispy_forms_tags %}
+
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
 <div class="container" id="signup_container">
   <div class="row">
-    <div class="col">
+    <div class="col" id="singup_description">
       <h1>{% trans "Sign Up" %}</h1>
 
       <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
@@ -17,11 +19,11 @@
     <div class="col">
       <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
-        {{ form.as_p|crispy }}
+        {{ form|crispy }}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+        <button class="btn btn-primary" type="submit" id="singup_btn">{% trans "Sign Up" %} &raquo;</button>
       </form>
     </div>
   </div>
