--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -54,6 +54,41 @@
                             {% else %}
                                 <div class="form-row">
                                     <div class="form-group">
+                                        {{form.used_id|as_crispy_field}}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.booked_time|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.booked_date|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.menu_type|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.table_num|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.guests_num|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                    {{ form.status|as_crispy_field }}
+                                    </div>
+                                </div>
+                                <!-- <div class="form-row">
+                                    <div class="form-group">
                                     {{ form.booked_time|as_crispy_field }}
                                     </div>
                                 </div>
@@ -66,7 +101,7 @@
                                     <div class="form-group">
                                     {{ form.guests_num|as_crispy_field }}
                                     </div>
-                                </div>
+                                </div> -->
                             {% endif %}
                         <button type="submit" class="btn btn-success" id="book_btn">Book Now</button>
                     </form>
