--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,27 +5,24 @@
 {% block content %}
 <!-- Signup and login table tab -->
 <div class="row" id="index_wrapper">
-    <div class="col" id="tab_content">
-        <div class="tab">
-            <button class="tablinks active" id="login_tablink" onclick="activeTab('login')">Login</button>
-            <button class="tablinks" id="signup_tablink" onclick="activeTab('signup')">Sign Up</button>              
-        </div>
-        <!-- Login tab -->
-        <div id="login_container" class="tabcontent">
+    <div class="row">
+        <div class="col" id="container_title">
             <h3>Login</h3>
+        </div>
+    </div>
+    <div class="row" id="log_container">
+        <div class="col" id="login_container">
             <form class="login" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ login_form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="primaryAction" type="submit">Login</button>
+                <button class="primaryAction btn btn-primary" type="submit">Login</button>
             </form>
         </div>
-        <!-- signup tab -->
-        <div id="singup_container" class="tabcontent">
-            <a href="{% url 'account_signup' %}"><h3>Sign Up</h3></a>
-        </div>
+        <hr>
+        <a class="btn btn-primary" href="{% url 'account_signup' %}" role="button">Sing Up</a>
     </div>
 </div>
 <!-- End of table tab -->
