--- a/static/css/base.css
+++ b/static/css/base.css
@@ -71,83 +71,47 @@ footer {
 
 /* Styles for index.html */
 #index_wrapper {
-    width: 20%;
-    /* margin: 15% auto; */
-}
-
-#tab_content{
-    width: 20%;
-    height: 45%;
-    
-}
-
-.tabcontent, .tab {
-    margin: 0 auto;
-}
-
-/* login styles */
-#login_container {
-    background-color: blue;
-    width: 80%;
-}
-
-/* signup styles */
-#singup_container {
     background-color: white;
-    width: 80%;
-    display: none;
-}
-
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #bf80ff;
-    width: 80%;
+    width: 20%;
     display: flex;
-    justify-content: space-around;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #b4ebc2;
-}
-
-.tab button.active:hover {
-    background-color: #65cf7f;
-}
-
-.tab button:hover {
-    background-color: #a94dff;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
-    width: 100%;
-    background-color: inherit;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-}
-
-
-/* Style the tab content */
-.tabcontent {
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-    text-align: center;
-}
-
-.tabcontent {
+    flex-direction: column;
+    align-items: center;
+    /* margin: 15% auto; */
     animation: fadeEffect 1s; /* Fading effect takes 1 second */
-} 
-  
+}
+
 /* Go from zero to full opacity */
 @keyframes fadeEffect {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+/* login styles */
+#login_container {
+    background-color: white;
+    align-items: center;
+    width: 80%;
+}
+
+#container_title{
+    margin: 10px auto;
+}
+
+#login_container form {
+    margin: 10px auto;
+}
+
+#index_wrapper h3,
+#login_container form {
+    text-align: center;
+}
+
+.btn-primary{
+    width: 140px;
+}
+
+#log_container a {
+    margin: 10px auto;
 }
 /* end of styles for index.html */
 
