Web responsive styles

--- a/booknow/templates/booknow/booknow.html
+++ b/booknow/templates/booknow/booknow.html
@@ -8,7 +8,8 @@
         {% if request.user.is_authenticated %}
             <div class="row">
                 <div class="col form-heading">
-                    <h2>Hello {{ user.username}} here you can reserver you table.</h2>
+                    <h2>Hello {{ user.username}}.</h2>
+                    <p>Lets make a reservation request.</p>
                 </div>
             </div>
             <div class="row">
