--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -6,7 +6,7 @@
     {% if request.user.is_authenticated %}
       {% if messages %}
         {% for message in messages %}
-          <div class="row alert alert-success" role="alert">
+          <div class="row alert alert-success message" role="alert">
             <div class="col">
               {{ message }}
             </div>
@@ -23,7 +23,7 @@
         <div class="row">
           <div class="col">
             <div id="booked">
-              <h3>Here are all the comfirmed bookings</h3>
+              <h3>Comfired bookings</h3>
               {% for booking in booked %}
                   <div class="row">
                     <div class="col">
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col">
             <div id="pending">
-              <h3>Here are all the pending bookings</h3>
+              <h3>Pending bookings</h3>
                 {% for pend in pending %}
                     <div class="row">
                       <div class="col">
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col">
             <div id="booked">
-              <h3>Here are all the comfirmed bookings</h3>
+              <h3>Comfirmed bookings</h3>
               {% for booking in booked %}
                 {% if booking.used_id == user.username %}
                   <div class="row">
@@ -94,7 +94,7 @@
         <div class="row">
           <div class="col">
             <div id="pending">
-              <h3>Here are all the pending bookings</h3>
+              <h3>Pending bookings</h3>
               {% for pend in pending %}
                 {% if booking.used_id == user.username %}
                   <div class="row">
