--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,6 +22,7 @@
             </form>
         </div>
         <hr>
+        <!-- Singup button redirects to account/signup -->
         <a class="btn btn-primary" href="{% url 'account_signup' %}" role="button">Sing Up</a>
     </div>
 </div>
