--- a/booking/templates/booking/booking.html
+++ b/booking/templates/booking/booking.html
@@ -14,6 +14,7 @@
         {% endfor %}
       {% endif %}
       <!-- Booking information -->
+      <!-- Booking information for admin role-->
       {% if user.username == "admin" %}
         <div class="row description">
           <div class="col">
@@ -66,6 +67,7 @@
           </div>
         </div>
       {% else %}
+      <!-- Booking information for simple user role-->
         <div class="row">
           <div class="col">
             <div id="booked">
@@ -118,6 +120,7 @@
         </div>
       {% endif %}
     {% else %}
+        <!-- No authorised users view-->
           <div class="row">
             <div class="col">
               <h1>You need to be logged in to see the content of this page.</h1>
